--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-scroll": "^1.8.9",
     "styled-components": "^5.3.11",
     "typewriter-effect": "^2.19.0",
-     "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
